--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,29 @@
 // Navigation Styles here
+
+header {
+    position: fixed;
+    width: 800px;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 40px;
+    border-bottom: 2px;
+    border-style: dashed;
+    border-color: @silver;
+    padding: 10px;
+    display:flex;
+    align-items: center;
+
+    li {
+        margin: 20px;
+    }
+    a {
+        color: @shark;
+        text-decoration: none;
+    }
+}
+
+header  * {
+    display: inline;
+}
+
