--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,7 @@
+.welcome {
+  border-bottom: 2px dashed @silver
+ 
+}
 .home {
 
   .content-section {
@@ -7,7 +11,6 @@
     justify-content: space-between;
 
    
-    
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -56,6 +59,11 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn {
+        .mixin;
+      }
     }
+  
   }
 }// home
