--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,14 @@
 // Mixins in here
+.mixin {
+    background: @button-bg;
+    border-radius: 10px;
+    padding: 12px 40px;
+    font-size: 16px;
+    color: @white;
+    height: 2em;
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 2em;
+}
+
