--- a/less/navigation.less
+++ b/less/navigation.less
@@ -11,6 +11,7 @@ header {
     border-style: dashed;
     border-color: @silver;
     padding: 10px;
+    padding-top: 2em;
     display:flex;
     align-items: center;
 
@@ -20,6 +21,10 @@ header {
     a {
         color: @shark;
         text-decoration: none;
+    }
+    nav {
+        padding-left: 300px;
+
     }
 }
 
