--- a/less/index.less
+++ b/less/index.less
@@ -5,5 +5,5 @@
 @import "global.less";
 @import "navigation.less";
 @import "footer.less";
-@import 'home-page.less';
-
+@import "home-page.less";
+@import "500px.less";
