--- a/css/index.css
+++ b/css/index.css
@@ -243,7 +243,7 @@ header * {
   border-bottom: 2px dashed #C0C0C0;
 }
 .home .inverse-content .text-content {
-  padding-left: 1%;
+  padding-left: 2%;
   padding-right: 0;
 }
 .home .inverse-content .img-content {
@@ -281,8 +281,27 @@ header * {
 }
 @media only screen and (max-width: 500px) {
   header {
-    display: flex;
     width: 500px;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    padding-bottom: 1em;
+    padding-top: 2em;
+  }
+  header h2 {
+    width: 500px;
+    padding-left: 5em;
+    justify-content: center;
+  }
+  header li {
+    margin: 10px;
+  }
+  header nav {
+    width: 500px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-right: 200px;
   }
   .welcome {
     padding: 1em;
@@ -320,5 +339,7 @@ header * {
   .home .content-pick .destination .btn {
     padding: 10px 40px;
     margin-left: 2em;
+    display: flex;
+    justify-content: center;
   }
 }
