--- a/less/500px.less
+++ b/less/500px.less
@@ -2,9 +2,33 @@
 
     @media only screen and (max-width: 500px) {
 header {
-    display: flex;
     width: 500px;
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    padding-bottom:1em;
+    padding-top: 2em;
+
+        h2 {
+            width: 500px;
+            // display:flex;
+            // flex-direction: row;
+            padding-left: 5em;
+            justify-content: center;
+        }
+    li {
+        margin: 10px;
+        }
+
+    nav {
+        width: 500px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding-right: 200px;
+    }
 }
+
 
 .welcome {
     padding: 1em;
@@ -51,6 +75,8 @@ header {
             .btn {
                 padding: 10px 40px;
                 margin-left: 2em;
+                display: flex;
+                justify-content: center;
                
             }
         }   
