--- a/less/500px.less
+++ b/less/500px.less
@@ -9,23 +9,30 @@ header {
     padding-bottom:1em;
     padding-top: 2em;
 
-        h2 {
-            width: 500px;
-            // display:flex;
-            // flex-direction: row;
-            padding-left: 5em;
-            justify-content: center;
+        ul{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
         }
+        // h2 {
+        //     width: 500px;
+        //     // display:flex;
+        //     // flex-direction: row;
+        //     padding-left: 5em;
+        //     justify-content: center;
+        // }
     li {
         margin: 10px;
+        width: 100px;
         }
 
     nav {
         width: 500px;
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        padding-right: 200px;
+        justify-content: space-evenly;
+        padding-right: 300px;
+        font-size: 2em;
     }
 }
 
